# web-boilerplate-generator

./: README.md  create_web_project.py  pyproject.toml
templates/base/: index.html  package.json  tsconfig.json
templates/base/src/: main.ts  styles.css
